--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 
 <html>
 
+<title>Tribute to Raila</title>
+
 <head>
 
+<nav>
+<ul>
+<li><a href="https://tinyurl.com/ytf6dnsr"> Early Life</a></li>
+<li><a href="https://www.arsenal.com/"> Hobbies</a></li>
+<li><a href="https://tinyurl.com/44rj4nwb"> Gallery</a></li>
+</ul>
+</nav>
 
-<title>Tribute to Raila</title>
+
 
 <link rel="stylesheet" href="Tribute.css">
  <h1><b>TRIBUTE TO RAILA AMOLLO ODINGA</b></h1>
@@ -35,7 +44,14 @@ I loved Raila’s resilience, courage in the face of adversity, and unwavering c
 <li>Roads Minister in NARC Government</li>
     </ul>
 
+<h4>SPEECHES AND QUOTES</h4>
 
+
+<video controls>
+<source src="raospeech.mp4">
+Viedo still loading
+
+</video>
 
 <p>Rest well, Baba.</p>
 
